# downside-risk-metrics-study

./: .gitignore  README.md  ROADMAP.md  data_feasibility_probe.py  main.py  pyproject.toml  research_problem.md
context/: decisions.md  findings.md  gotchas.md  open-questions.md
outputs/2026-07-12_09-00-10_biased_arm_replication/: config.json  per_stock_metrics.csv  rank_correlations.csv
outputs/2026-07-12_09-09-43_biased_arm_replication/: config.json  per_stock_metrics.csv  rank_correlations.csv
outputs/2026-07-12_09-15-01_biased_arm_multiwindow/: config.json  per_stock_metrics_1978-1989.csv  per_stock_metrics_1988-1999.csv  per_stock_metrics_1998-2009.csv  rank_correlations_all_windows.csv
outputs/2026-07-12_09-26-14_partial_equity_rq1/: A_vs_B_predictive_vs_holding.csv  config.json  per_stock_metrics.csv
outputs/2026-07-12_09-55-28_rq2_ablation/: ablation_grid.csv  config.json  paper_variant_bootstrap_ci.csv
outputs/2026-07-12_10-30-46_crypto_rq3/: config.json
outputs/2026-07-12_10-40-54_rq4_learned_params/: config.json  rq4_walk_forward.csv
outputs/2026-07-12_11-25-14_crypto_rq3/: bootstrap_and_economic.json  (+3 more)
src/: convert_pdf.py  data_pipeline.py  left_tail.py  partial_moments.py  run_biased_arm.py  run_crypto_rq3.py  run_death_aware_crypto.py  run_partial_equity_rq1.py  run_robustness_checks.py  run_rq2_ablation.py  run_rq4_learned_params.py
tests/: test_partial_moments.py
writeup/: icaif_paper.md  literature_review.md  literature_review_post2016.md  partial_moment_audit.md  volatility_persistence_paper.md  volatility_persistence_paper.tex
(+58 files in other folders)
