[project]
name = "partial-moments-audit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle>=2.2.3",
    "lxml>=6.1.1",
    "markdown>=3.10.2",
    "matplotlib>=3.11.1",
    "pandas>=3.0.3",
    "pandas-datareader>=0.11.1",
    "pyarrow>=25.0.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "xhtml2pdf>=0.2.17",
    "yfinance>=1.5.1",
]
